2005-04-19  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlcomposition.c: 
	gnl_composition_dispose was superfluous, now removed

2005-04-12  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac: releasing 0.2.0 !!

2005-04-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c: (gnl_timeline_query):
	Prevent a segfault when querying position before anything is scheduled.
	Patch by Wouter Paesen.

	* gnl/gnlcomposition.c: (gnl_composition_schedule_operation): 
	Fixe scheduling when there's a gap between the operation's priority and
	the child object's priority. Patch by Wouter Paesen.

2005-04-06  Edward Hervey  <bilboed@bilboed.com>

	* gnonlin-config.in: 
	forgot to update it with new values

	* gnl/gnlsource.c: (source_getfunction):
	gcc-2.95.* compilation error

2005-04-04  Edward Hervey  <bilboed@bilboed.com>

	* test/sourcetest2.c:
	* test/pipelines.c: 
	updated to new api

	* test/Makefile.am: commenting out extra tests

	* gnl/gnlobject.c: (gnl_object_covers):	
	added gtk-doc comment

	* docs/libs/Makefile.am: corrections for distcheck

2005-03-31  Edward Hervey  <bilboed@bilboed.com>

	* docs/libs/tmpl/gnlcomposition.sgml: 
	* docs/libs/tmpl/gnlobject.sgml:
	Added documentation on GnlFindMethod, GnlCoverType and GnlDirection

2005-03-31  Edward Hervey  <bilboed@bilboed.com>

	* docs/random/design: 
	Updated explanatory documentation

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* docs/libs/tmpl/gnlcomposition.sgml: 

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

 	* gnl/gnl.h: 
	* gnl/gnlobject.h:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/tmpl/gnlobject.sgml:
	typo error in gnlobject.h,
	removed documentation for gnl_object_nearest_change()

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlobject.h:
	* gnl/gnlobject.c:
	Removed gnl_object_nearest_change() and cleanup of commented code

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* gnl/Makefile.am:
	* gnl/gnl.h:
	* gnl/gnltypes.h:
	* gnl/gnlgroup.c: